# crgame

./: .gitignore  Cargo.toml
assets/: GFX.afdesign
assets/levels/: level.yml
src/: lib.rs  main.rs
src/level_loader/: level.rs  mod.rs
